[package]
name = "mali_os"
version = "0.1.0"
authors = ["Hamza Muric <hamzamuric9@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 240  # seconds

[dependencies]
bootloader = "0.8.1"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.5"
uart_16550 = "0.2.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
